# NLP_Project

./: .gitignore  LICENSE  README.md  ie7500_group2_updatedProjectProposal.docx  initial_project_notebook.ipynb  milestone2.md  pyproject.toml  requirements.txt  setup.py
archive/: ie7500_group2_initialProjectProposal--SkyComm-AIDE .docx
documents/: milestone1.docx  milestone2.md
experiments/: bert_model_experiment.ipynb  bilstm_model_experiment.ipynb  distilbert_model_experiment.ipynb  distilbert_tf_model_experiment.ipynb  lr_model_experiment.ipynb  lstm_model_experiment.ipynb  svm_model_experiment.ipynb
notebooks/: DistilBERT_sentiment_pipeline_cleanran.ipynb  IE7500_Logistic Regression&SVM&BERT--Copy.ipynb  IE7500_Logistic Regression&SVM&BERT-Copy.ipynb  IE7500_Logistic Regression&SVM&BERT.ipynb  initial_project_notebook.ipynb
src/emolex/: dl_models.py  evaluation.py  ml_models.py  models.py  preprocessing.py  train.py  utils.py
